# TeraStitcher

./: .gitignore
src/: CMakeLists.txt  vcpkg.json
src/crossmips/: CrossMIPs.h  compute_funcs.h
src/imagemanager/: BDVVolume.cpp  BDVVolume.h  ComposedVolume.cpp  ComposedVolume.h  HDF5Mngr.cpp  HDF5Mngr.h  IMS_HDF5Mngr.cpp  IMS_HDF5Mngr.h  MappedVolume.cpp  MappedVolume.h  MultiCycleVolume.cpp  MultiCycleVolume.h  MultiSliceVolume.cpp  MultiSliceVolume.h  RawVolume.cpp  RawVolume.h  SimpleVolume.cpp  SimpleVolume.h  SimpleVolumeRaw.cpp  SimpleVolumeRaw.h  Stack.cpp  Stack.h  StackRaw.cpp  StackRaw.h  StackedVolume.cpp  StackedVolume.h  TiledMCVolume.cpp  TiledMCVolume.h  TiledVolume.cpp  TiledVolume.h  TimeSeries.cpp  TimeSeries.h  UnstitchedVolume.cpp  UnstitchedVolume.h  VirtualVolume.cpp  VirtualVolume.h  imBlock.cpp  imBlock.h
src/iomanager/: IOPluginAPI.h  ioplugins.h
src/iomanager/plugins/opencv2D/: CMakeLists.txt  opencv2D.cpp
src/multilayersmanager/: MergeTiles2.cpp  MultiLayers.cpp  MultiLayers.h  StackStitcher2.cpp  StackStitcher2.h  TPAlgo2.h  TPAlgo2MST.cpp  TPAlgo2MST.h
src/stitcher/: CMakeLists.txt  Displacement.cpp  Displacement.h  DisplacementMIPNCC.cpp  DisplacementMIPNCC.h  MergeTiles.cpp  PDAlgo.h  PDAlgoMIPNCC.cpp  PDAlgoMIPNCC.h  StackRestorer.cpp  StackRestorer.h  StackStitcher.cpp  StackStitcher.h  TPAlgo.h  TPAlgoLQP.cpp  TPAlgoLQP.h  TPAlgoMST.cpp  TPAlgoMST.h  resumer.cpp  resumer.h
src/ui/: CLI.cpp  CLI.h
src/volumemanager/: vmBlock.cpp  vmBlock.h  vmBlockVolume.cpp  vmBlockVolume.h  vmMCVolume.cpp  vmMCVolume.h  vmStack.cpp  (+7 more)
(+3 files in other folders)
